# ov-panel

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
backend/: alembic.ini  app.py  config.py  logger.py
backend/alembic/: env.py
backend/alembic/versions/: 119c8a667c3f_initial_migration_first_version_of_db.py  5d05b8afd950_added_admins_table.py
backend/auth/: auth.py
backend/db/: __init__.py  crud.py  engine.py  models.py
backend/operations/: daily_checks.py  server_info.py  user_management.py
backend/routers/: __init__.py  admins.py  server.py  users.py
backend/schema/: _input.py  output.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/components/: ActionsDropdown.jsx  AddNodeModal.jsx  AddUserModal.jsx  DownloadFromNodeModal.jsx  EditNodeModal.jsx  EditUserModal.jsx  LoadingButton.jsx  MobileNav.jsx  NodeTable.jsx  Pagination.jsx  SelectNodeForDownloadModal.jsx  Sidebar.jsx  UserStatCard.jsx  UserTable.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lang/: en.json  fa.json
frontend/src/pages/: DashboardLayout.jsx  LoginPage.jsx  NodeManagement.jsx  ServerStats.jsx  SettingsPage.jsx  UserManagement.jsx
frontend/src/services/: api.js
